// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TooltipStyled /> should render the component with position bottom 1`] = `
<div
  className="sc-bdVaJa cIxpns"
  content="The world Champion!"
>
  Corinthians!
</div>
`;

exports[`<TooltipStyled /> should render the component with position left 1`] = `
<div
  className="sc-bdVaJa iFekpn"
  content="The world Champion!"
>
  Corinthians!
</div>
`;

exports[`<TooltipStyled /> should render the component with position right 1`] = `
<div
  className="sc-bdVaJa fbeGPT"
  content="The world Champion!"
>
  Corinthians!
</div>
`;

exports[`<TooltipStyled /> should render the component with the default props 1`] = `
<div
  className="sc-bdVaJa dhSxpd"
  content="The world Champion!"
>
  Corinthians!
</div>
`;
